# Desktop_Plan

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
resources/: resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: configmanager.cpp  configmanager.h  dailyschedule.cpp  dailyschedule.h  taskmodel.cpp  taskmodel.h
src/ecg/: ecgadc.cpp  ecgadc.h  ecgdatasource.h  ecgsimulator.cpp  ecgsimulator.h
src/widgets/: apiquotawidget.cpp  apiquotawidget.h  dailytimetable.cpp  dailytimetable.h  ecgwidget.cpp  ecgwidget.h  eisenhowermatrix.cpp  eisenhowermatrix.h
